Update example Java Code

--- a/execute.html
+++ b/execute.html
@@ -53,11 +53,11 @@
 <pre id="editor">
 // Example Java Code
 class Main {
-
-  public static void main(String[] args) {
-    System.out.println("Hello world!");
-  }
-  
+    public static void main(String[] args) {
+        
+        // Print Hello World
+        System.out.println("Hello world!");
+    }
 }
 </pre>					
 					</div>
