Execution styling & notes update.

--- a/execute.html
+++ b/execute.html
@@ -75,9 +75,13 @@ class Main {
 					</div>
 					<!-- Execution Window -->
 					<div id="execution_container" class="row execution_container">
-						<div class="execution_placeholder">
+						<!--div class="execution_placeholder">
 							Press 'Run Code <i class="fas fa-play"></i>' button above to execute.
-						</div>
+						</div-->
+						<samp>
+<!--Must present final spacing & formatting within PRE tag-->
+<pre id="execution">Hello world!</pre>
+						</samp>
 					</div>
 				</div>
 				
