--- a/index.html
+++ b/index.html
@@ -34,37 +34,21 @@
 						<li class="list-group-item list-group-item-success">Spin up a development website for testing on server.</li>
 						<li class="list-group-item list-group-item-success">Create breakdown of tasks.</li>
 						<li class="list-group-item list-group-item-success">Create code editor enviroment.</li>
-						<li class="list-group-item list-group-item-success">Implement Prisim.js &amp; CodeMirror styling/validation to editor.</li>
+						<li class="list-group-item list-group-item-success">Implement styling/validation to editor.</li>
 						<li class="list-group-item list-group-item-warning">Research Java Runtime enviroment.</li>
-						<li class="list-group-item list-group-item-warning">Execute Java code in browser.</li>
-						<li class="list-group-item">Test and debug.</li>
-						<li class="list-group-item">Review, clean, &amp; comment code.</li>
+						<li class="list-group-item list-group-item-warning">FLASK Backend</li>
+						<li class="list-group-item list-group-item-warning">Create Docker instances for each language</li>
 						<li class="list-group-item">Determine how code execution will be saved to database.</li>
-						<li class="list-group-item">Research R execution tools.</li>
-						<li class="list-group-item">Execute R code in browser.</li>
-						<li class="list-group-item">Test and debug R execution.</li>
-						<li class="list-group-item">Migrate code execution to existing Visual Peer Review layout.</li>
-						<li class="list-group-item">Adjust styling.</li>
 						<li class="list-group-item">Test.</li>
 					</ul>
 				</div>
 				<div class="col-12 col-md-6">
 					<h3>Research Links:</h3>
 					<ul>
-						Code Editors:
-						<li><a href="https://codemirror.net/">https://codemirror.net/</a></li>
-						<li><a href="https://prismjs.com/">https://prismjs.com/</a></li>
-						<li><a href="https://ace.c9.io/">https://ace.c9.io/</a> &lArr; Best option so far, using this.</li>
-						<br>Browser Compiler Examples:
-						<li><a href="https://www.compilejava.net/">https://www.compilejava.net/</a></li>
-						<li><a href="https://www.jdoodle.com/online-java-compiler/">https://www.jdoodle.com/online-java-compiler/</a></li>
-						<li><a href="https://codepen.io/">https://codepen.io/</a></li>
-						<br>Open-Source Help:
-						<li><a href="https://github.com/shawon100/Online-Compiler">https://github.com/shawon100/Online-Compiler</a></li>						
-						<li><a href="https://www.quora.com/How-do-I-make-an-online-interpreter-like-the-ones-on-sites-like-Codecademy/answer/Vishnu-Bharathi">https://www.quora.com/How-do-I-make-an-online-interpreter-like-the-ones-on-sites-like-Codecademy/answer/Vishnu-Bharathi</a></li>	
-						<br>Java:
-						<br>Pyton:
-						<li><a href="http://www.brython.info/">http://www.brython.info/</a></li>
+						Primary Help:
+						<li><a href="https://www.quora.com/How-do-I-create-online-compiler-for-C-C++-and-Java-using-node-js-as-server-language">https://www.quora.com/How-do-I-create-online-compiler-for-C-C++-and-Java-using-node-js-as-server-language</a></li>
+						<li><a href="https://github.com/polterguy/phosphorusfive">https://github.com/polterguy/phosphorusfive</a></li>
+						<li><a href="https://palletsprojects.com/p/flask/">https://palletsprojects.com/p/flask/</a></li>
 					</ul>
 				</div>
 			</div>
