--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
 				</div>
 			</div>
 			<div class="row pad-above pad-below">
-				<div class="col-12 col-md-6">
+				<div class="col-12 col-md-6">					
 					<h3>To-Do List:</h3>
 					<ul class="list-group">
 						<li class="list-group-item list-group-item-success">Spin up a development website for testing on server.</li>
 						<li class="list-group-item list-group-item-success">Create breakdown of tasks.</li>
 						<li class="list-group-item list-group-item-success">Create code editor enviroment.</li>
 						<li class="list-group-item list-group-item-success">Implement styling/validation to editor.</li>
-						<li class="list-group-item list-group-item-warning">Research Java Runtime enviroment.</li>
 						<li class="list-group-item list-group-item-warning">FLASK Backend</li>
 						<li class="list-group-item list-group-item-warning">Create Docker instances for each language</li>
 						<li class="list-group-item">Determine how code execution will be saved to database.</li>
@@ -50,6 +49,7 @@
 						<li><a href="https://github.com/polterguy/phosphorusfive">https://github.com/polterguy/phosphorusfive</a></li>
 						<li><a href="https://palletsprojects.com/p/flask/">https://palletsprojects.com/p/flask/</a></li>
 					</ul>
+					<iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=Mpfk&repo=VisualPeerReview&limit=10" allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
 				</div>
 			</div>
 		</div>
