--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="row" style="margin-top: 5em;">
 				<div class="col-12">
 					<div class="row buttonmarg">
-						<a class="btn btn-purple" href="#UXDiagram" target="new">View User Experience (UX) Diagram</a>
+						<a class="btn btn-purple" href="#UXDiagram">View User Experience (UX) Diagram</a>
 					</div>
 					<div class="row buttonmarg">
 						<a class="btn btn-purple" href="https://xd.adobe.com/view/d82fecb5-e71f-438f-6fc8-c891249d2578-ae1e/" target="_blank">View User Experience (UX) Prototype</a>
@@ -48,7 +48,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row pad-above pad-below">
+			<div class="row pad-above">
 				<div class="col-12 col-md-6">					
 					<h3>To-Do List:</h3>
 					<ul class="list-group">
@@ -91,7 +91,7 @@
 					<iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=Mpfk&repo=VisualPeerReview&limit=10" allowtransparency="true" frameborder="0" scrolling="no" width="502px" height="252px"></iframe>
 				</div>
 			</div>
-			<div class="row pad-above" id="UXDiagram">
+			<div class="row pad-above pad-below" id="UXDiagram">
 				<div class="col-12">
 					<h3>User Experience (UX) Diagram</h3>
 					<p>Structure / Layout. The way pages and naviation will be organizaed.</p>
