Main-Body Template

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 			</div>
 			<div class="row" style="margin-top: 5em;">
 				<div class="col-12">
+					<div class="row buttonmarg dropright">
+						<button class="btn btn-purple dropdown-toggle" type="button" id="templateMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="badge badge-primary">New!</span>&nbsp;&nbsp;View Templates </button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="templates/main-body.html">Main-Body</a>
+							<a class="dropdown-item disabled" href="#">Single-Focus Item</a>
+							<a class="dropdown-item disabled" href="#">Dual-Focus Item</a>
+						</div>
+					</div>
 					<div class="row buttonmarg">
 						<a class="btn btn-purple" href="#UXDiagram">View User Experience (UX) Diagram</a>
 					</div>
@@ -43,8 +51,8 @@
 					<div class="row buttonmarg">
 						<a class="btn btn-purple disabled" href="codeeditor/execute.html" target="_blank">Browser IDE Example</a>
 					</div>
-					<div class="row buttonmarg">
-						<a class="btn btn-info" href="https://github.com/Mpfk/VisualPeerReview" target="_blank">Source Code on GitHub <i class="fab fa-github"></i></a>
+					<div class="row buttonmarg" style="margin-top: 2em">
+						<a class="btn btn-primary" href="https://github.com/Mpfk/VisualPeerReview" target="_blank">Source Code on GitHub <i class="fab fa-github"></i></a>
 					</div>
 				</div>
 			</div>
@@ -64,11 +72,11 @@
 						<li class="list-group-item list-group-item-warning">reactJS</li>
 						<li class="list-group-item list-group-item-warning">Front-End Development</li>
 						<ul class="list-group-item">
-							<li class="list-group-item list-group-item-warning">Site Structure</li>
-							<li class="list-group-item list-group-item-warning">Navigation</li>
+							<li class="list-group-item list-group-item-success">Site Structure</li>
+							<li class="list-group-item list-group-item-success">Navigation</li>
 							<li class="list-group-item list-group-item-warning">Universal Styles</li>
-							<li class="list-group-item list-group-item">Sign-In Page</li>
-							<li class="list-group-item list-group-item">Register Page</li>
+							<li class="list-group-item list-group-item-warning">Sign-In Page</li>
+							<li class="list-group-item list-group-item-warning">Register Page</li>
 							<li class="list-group-item list-group-item">Dashboard</li>
 							<li class="list-group-item list-group-item">New Project Page</li>
 							<li class="list-group-item list-group-item">Project Page</li>
@@ -102,6 +110,8 @@
 				</div>
 			</div>
 		</div>
-		
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</body>
 </html>
