--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 						<button class="btn btn-purple dropdown-toggle" type="button" id="templateMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="badge badge-primary">New!</span>&nbsp;&nbsp;View Templates </button>
 						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 							<a class="dropdown-item" href="templates/main-body.html">Main-Body</a>
-							<a class="dropdown-item disabled" href="#">Single-Focus Item</a>
-							<a class="dropdown-item disabled" href="#">Dual-Focus Item</a>
+							<a class="dropdown-item disabled" href="templates/single-focus.html">Single-Focus Item</a>
+							<a class="dropdown-item disabled" href="templates/dual-focus.html">Dual-Focus Item</a>
 						</div>
 					</div>
 					<div class="row buttonmarg">
