--- a/sign-in.html
+++ b/sign-in.html
@@ -99,7 +99,7 @@
 						<!-- ACTION: sign-in -->
 						<button type="submit" class="btn btn-purple">Sign-In</button>
 						<!-- ACTION: forgot password -->
-						<a class="text-purple" style="font-size: smaller; padding-left: 1.5em; vertical-align: middle;" href="password-recovery.html">Forgot Password?</a>
+						<a class="text-purple forgot-password" href="password-recovery.html">Forgot Password?</a>
 					</form>
 					<!-- FORM end -->
 				</div>
