--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 						</div>
 					</div>
 					<div class="row buttonmarg">
+						<a class="btn btn-purple" href="sign-in.html" target="new"><span class="badge badge-primary">New!</span>&nbsp;&nbsp;View Website Structure</a>
+					</div>
+					<div class="row buttonmarg">
 						<a class="btn btn-purple" href="#UXDiagram">View User Experience (UX) Diagram</a>
 					</div>
 					<div class="row buttonmarg">
