--- a/sign-in.html
+++ b/sign-in.html
@@ -97,7 +97,7 @@
 							<input type="password" class="form-control" id="password" placeholder="Password">
 						</div>
 						<!-- ACTION: sign-in -->
-						<button type="submit" class="btn btn-purple">Sign-In</button>
+						<a type="submit" class="btn btn-purple" href="new-project/link-repo.html">Sign-In</a>
 						<!-- ACTION: forgot password -->
 						<a class="text-purple forgot-password" href="password-recovery.html">Forgot Password?</a>
 					</form>
