--- a/new-project/project-details.html
+++ b/new-project/project-details.html
@@ -54,15 +54,15 @@
 				<ul class="navbar-nav ml-auto">
 					<!-- ITEM: Home -->
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="#">Dashboard</a>
 					</li>
 					<!-- ITEM: About -->
 					<li class="nav-item">
-						<a class="nav-link" href="#">About</a>
+						<a class="nav-link" href="#">Settings</a>
 					</li>
 					<!-- ITEM: Sign-In / Register -->
 					<li class="nav-item">
-						<a class="nav-link" href="#">Sign-In / Register</a>
+						<a class="nav-link" href="#">Hello, FirstName <i class="far fa-user-circle"></i></a>
 					</li>
 				</ul>
 			</div>
